# privacy-preserving-data-architecture

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.md  CITATIONS-OF-THIS-REPO.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pattern_proposal.md
.github/workflows/: ci.yml  publish-testpypi.yml
architectures/: README.md  biomedical-reference-architecture.md  scientific-collaboration-controlled-access.md
dashboard/: README.md  index.html  package.json  vite.config.ts
dashboard/scripts/: sync-data.cjs
dashboard/src/: App.tsx  main.tsx  types.ts
docs/: ai-assistance-policy.md  glossary.md  index.html
docs/adr/: 0001-why-tenseal.md  0002-why-opacus.md  0003-why-csv-control-mapping.md
docs/compliance/: README.md  gdpr-article-mapping.csv  hipaa-control-mapping.md  nist-control-mapping.csv  nist-control-mapping.md  ppdsa-alignment.md
docs/papers/: references.bib
docs/schemas/: dp-audit-log.schema.json
dp-llm-training/: budget_accountant.py  dp_trainer.py  privacy_budget_calculator.py  validate_audit_log.py
examples/: README.md  end-to-end-clinical-data-flow.ipynb  requirements-notebook.txt
fhe-feature-extraction/: README.md  fhe_pipeline.py
gallery/: README.md  biomedical-reference-architecture.mmd  llm-leakage-threat-taxonomy.mmd  scientific-collaboration-controlled-access.mmd
governance-templates/: README.md  data-minimization-checklist.md  derived-variable-lineage-template.md  irb-amendment-template.md  pre-export-output-review-checklist.md
llm-leakage-assessment/: ASSESSMENT-CHECKLIST.md  assessment_runner.py  threat-taxonomy.md
tests/: test_assessment_runner.py  test_budget_accountant.py  test_dp_trainer.py  test_fhe_pipeline.py  test_membership_inference.py  test_synthetic_data.py  test_validate_audit_log.py
tools/: __init__.py  validate_control_mapping.py
validation/: run_dp_validation.py  run_fhe_validation.py  synthetic_medical_signal.py
(+39 files in other folders)
