[project]
name = "privacy-preserving-data-architecture"
version = "0.2.0"
description = "Reusable architecture patterns and prototype modules for privacy-preserving analysis of sensitive biomedical and scientific data"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Junyi Zhang", email = "zjywy0228@gmail.com"}]
requires-python = ">=3.10"
keywords = [
    "fully-homomorphic-encryption",
    "differential-privacy",
    "llm-security",
    "privacy-preserving-ml",
    "biomedical-data",
    "data-governance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]

# Core dependencies kept minimal: the heavy ML libraries (tenseal, opacus,
# transformers) are optional because not all modules need all of them.
dependencies = []

[project.optional-dependencies]
fhe = ["tenseal>=0.3.14"]
dp = ["opacus>=1.4.0", "torch>=2.0.0"]
llm = ["transformers>=4.40.0", "datasets>=2.19.0", "pyyaml>=6.0.1"]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "numpy>=1.26.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0.1",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/zjywy0228/privacy-preserving-data-architecture"
Repository = "https://github.com/zjywy0228/privacy-preserving-data-architecture"
Documentation = "https://zjywy0228.github.io/privacy-preserving-data-architecture/"
Issues = "https://github.com/zjywy0228/privacy-preserving-data-architecture/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
